Fixed issues and added improvements